--- a/ta_library/build.gradle
+++ b/ta_library/build.gradle
@@ -18,7 +18,8 @@
 apply plugin: 'java'
 apply plugin: "kotlin"
 apply plugin: 'org.jetbrains.dokka'
-
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.damaisubimawanto'
 
 targetCompatibility = '1.6'
 sourceCompatibility = '1.6'
